@@ -78,6 +78,7 @@
 #define TRACE_CIRCULAR                  ((xmlChar*) "circular")
 #define TRACE_PREFIX                    ((xmlChar*) "trace-prefix")
 #define TRACE_MPI                       ((xmlChar*) "mpi")
+#define TRACE_SHMEM                     ((xmlChar*) "shmem")
 #define TRACE_OPENCL                    ((xmlChar*) "opencl")
 #define TRACE_CUDA                      ((xmlChar*) "cuda")
 #define TRACE_PACX                      ((xmlChar*) "pacx")
